# jobs

./: .gitignore  Brewfile  Brewfile.lock.json  Makefile  README.md
.github/workflows/: bot.yml  codeql-analysis.yml  deployçscraper.yml  dotnet.yml  frontend.yml  go.yml  greetings.yml  node.js.yml  scraping.yml  sonar.yml  sonarcloud.yml
Jobs.Aggregator/: Jobs.Aggregator.sln  index.json  indexold.json  linkedin_aggregated.json  main.js
Jobs.Aggregator/Jobs.Aggregator.Aws/: Jobs.Aggregator.Aws.csproj  ScraperResultsService.cs
bot/: local.js  main.js  package.json
frontend/: README.md  angular.json  package-lock.json  package.json  pubspec.yaml
infrastructure/: .terraform.lock.hcl  aggregation.tf  basic_lambda_roles.tf  bot.tf  caller_identity.tf  cloudfront.tf  data.tf  dns.tf  event_bridge_scrapper.tf  github.tf  lambda_scraper.tf  local.tf  main.tf  new_jobs.tf  output.tf  outputs.tf  post_scraping.tf  provider.tf  querier.tf  s3.tf  scraper_event_bus.tf  scraping.tf  scraping_queries.tf  terragrunt.hcl  tflint.hcl  var.tf
jobs_scaper/: Dockerfile  go.mod  go.sum  headers.json  lambda_entrypoint.go  linkedin.html  main.go  old_indeed.json
jobs_scraper/: go.mod  go.sum
lambda_controller/: go.mod  go.sum  main.go
playbooks/: deploy-frontend.yml  deploy_aggregator.yml  deploy_scraper.yml  hosts
querier/: pyproject.toml
querier/local/: local.py
querier/querier/: lambda_function.py  querying.py  router.py
scraper_controller_lambda/: configuration.go  go.mod  go.sum  main.go  scraper_controller.go
server/: package.json  tsconfig.json
(+143 files in other folders)
